k8s/manifests/platform/operator-lifecycle-manager/base/v0.46.0/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-all-traffic
  namespace: olm
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: olm-operator
  namespace: olm
spec:
  podSelector:
    matchLabels:
      app: olm-operator
  ingress:
    - ports:
        - port: metrics
          protocol: TCP
  egress:
    - {}
    - ports:
        - port: 53
          protocol: TCP
        - port: 53
          protocol: UDP
        - port: 5353
          protocol: TCP
        - port: 5353
          protocol: UDP
  policyTypes:
    - Ingress
    - Egress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: catalog-operator
  namespace: olm
spec:
  podSelector:
    matchLabels:
      app: catalog-operator
  ingress:
    - ports:
        - port: metrics
          protocol: TCP
  egress:
    - {}
    - ports:
        - port: 53
          protocol: TCP
        - port: 53
          protocol: UDP
        - port: 5353
          protocol: TCP
        - port: 5353
          protocol: UDP
    - ports:
        - protocol: TCP
          port: 50051
  policyTypes:
    - Ingress
    - Egress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: packageserver
  namespace: olm
spec:
  podSelector:
    matchLabels:
      app: packageserver
  ingress:
    - ports:
        - protocol: TCP
          port: 5443
  egress:
    - {}
    - ports:
        - port: 53
          protocol: TCP
        - port: 53
          protocol: UDP
        - port: 5353
          protocol: TCP
        - port: 5353
          protocol: UDP
    - ports:
        - protocol: TCP
          port: 50051
  policyTypes:
    - Ingress
    - Egress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-allow-all
  namespace: operators
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - {}
  egress:
    - {}
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: olm-catalog-grpc-ingress
  namespace: olm
spec:
  podSelector:
    matchExpressions:
      - key: olm.catalogSource
        operator: Exists
  policyTypes:
    - Ingress
  ingress:
    - ports:
        - protocol: TCP
          port: 50051
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: bundle-unpack-egress
  namespace: olm
spec:
  podSelector:
    matchExpressions:
      - key: operatorframework.io/bundle-unpack-ref
        operator: Exists
      - key: olm.managed
        operator: In
        values:
          - "true"
  policyTypes:
    - Egress
  egress:
    - {}
